test/src/e2e_vm_tests/test_programs/should_fail/recover_problem_in_different_file/src/main.sw
script;

mod foo;
mod bar;
mod baz;
mod no_such_file;

fn main() {}
